--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,15 +4,6 @@ theme:
   name: material
   palette:
     scheme: slate
-    primary: teal
-    accent: teal
-  features:
-    - navigation.instant
-    - navigation.tabs
-    - search.highlight
-    - content.code.copy
-    - content.tabs.link
-    - navigation.top
 markdown_extensions:
   - toc:
       permalink: true
@@ -32,3 +23,5 @@ nav:
   - Video Background: video-background.md
   - FAQ: faq.md
   - Changelog: changelog.md
+extra_css:
+  - stylesheets/custom-admonitions.css
