add rules preview

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,9 +19,10 @@ nav:
   - Home: index.md
   - Getting Started: setup.md
   - Customization:
-    - Overview: customization.md
-    - Watermark: watermark.md
-    - Social Headers: socials.md
+    - 🎨 Overview: customization.md
+    - 🏷️ Watermark: watermark.md
+    - 🧷 Social Headers: socials.md
+    - Rules Panel: rules.md
     - Keyboard Overlay: keyboard-overlay.md
     - Video Background: video-background.md
   - Keyboard Overlay: keyboard-overlay.md
