add team panel preview

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ nav:
     - 🏷️ Watermark: watermark.md
     - 🧷 Social Headers: socials.md
     - 📜 Rules Panel: rules.md
-    - Team Panel: team.md
+    - 👥 Team Panel: team.md
     - Gallery Grid: gallery.md
     - Keyboard Overlay: keyboard-overlay.md
     - Music Player: music-player.md
