add new features page and update social headers section with new custom icon implementation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,5 +30,6 @@ nav:
   # - FAQ: faq.md
   - Upgrading: upgrade.md
   - Changelog: changelog.md
+  - Future Plans: future-plans.md
 extra_css:
   - stylesheets/custom-admonitions.css
